Add pagination to get persons endpoint (#144)
This is a minimal version that is implemented in the controller method.
Shared functionality can be extracted once a new endpoint makes use of
pagination. We've also updated OpenAPI spec for the endpoint.
