# openapi.yml
@@ -26,6 +26,22 @@ paths:
             type: string
           required: false
           description: The last name of the person
+        - in: query
+          name: page
+          schema:
+            type: number
+            minimum: 0
+            default: 0
+          required: false
+          description: Zero-based page index (0..N)
+        - in: query
+          name: size
+          schema:
+            type: number
+            minimum: 1
+            default: 10
+          required: false
+          description: The size of the page to be returned
       responses:
         "200":
           description: Successfully performed the query on upstream APIs. An empty list is returned when no results are found.
@@ -34,11 +50,39 @@ paths:
               schema:
                 type: object
                 properties:
-                  persons:
+                  content:
                     type: array
                     minItems: 0
                     items:
                       $ref: "#/components/schemas/Person"
+                  pageable:
+                    $ref: "#/components/schemas/Pageable"
+                  totalPages:
+                    type: integer
+                    example: 1
+                  totalElements:
+                    type: integer
+                    example: 1
+                  last:
+                    type: boolean
+                    example: true
+                  size:
+                    type: integer
+                    example: 10
+                  number:
+                    type: integer
+                    example: 0
+                  sort:
+                    $ref: "#/components/schemas/Sort"
+                  numberOfElements:
+                    type: integer
+                    example: 1
+                  first:
+                    type: boolean
+                    example: true
+                  empty:
+                    type: boolean
+                    example: false
         "400":
           description: There were no query parameters passed in. At least one must be specified.
           content:
@@ -369,6 +413,26 @@ components:
         type:
           type: string
           example: OFF_BKG
+    Pageable:
+      type: object
+      properties:
+        sort:
+          $ref: "#/components/schemas/Sort"
+        offset:
+          type: integer
+          example: 0
+        pageNumber:
+          type: integer
+          example: 0
+        pageSize:
+          type: integer
+          example: 10
+        paged:
+          type: boolean
+          example: true
+        unpaged:
+          type: boolean
+          example: false
     Person:
       type: object
       properties:
@@ -404,7 +468,18 @@ components:
           type: string
           example: 2008/0545166T
           description: An identifier from the Police National Computer (PNC)
-
+    Sort:
+      type: object
+      properties:
+        empty:
+          type: boolean
+          example: true
+        sorted:
+          type: boolean
+          example: false
+        unsorted:
+          type: boolean
+          example: true
   examples:
     PersonNotFoundError:
       value:
