# src/main/kotlin/uk/gov/justice/digital/hmpps/hmppsintegrationapi/controllers/v1/PersonController.kt
@@ -2,6 +2,9 @@ package uk.gov.justice.digital.hmpps.hmppsintegrationapi.controllers.v1
 
 import jakarta.validation.ValidationException
 import org.springframework.beans.factory.annotation.Autowired
+import org.springframework.data.domain.Page
+import org.springframework.data.domain.Pageable
+import org.springframework.data.web.PageableDefault
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.RequestMapping
@@ -16,6 +19,7 @@ import uk.gov.justice.digital.hmpps.hmppsintegrationapi.services.GetAddressesFor
 import uk.gov.justice.digital.hmpps.hmppsintegrationapi.services.GetImageMetadataForPersonService
 import uk.gov.justice.digital.hmpps.hmppsintegrationapi.services.GetPersonService
 import uk.gov.justice.digital.hmpps.hmppsintegrationapi.services.GetPersonsService
+import uk.gov.justice.digital.hmpps.hmppsintegrationapi.util.paginateWith
 
 @RestController
 @RequestMapping("/v1/persons")
@@ -30,14 +34,15 @@ class PersonController(
   fun getPersons(
     @RequestParam(required = false, name = "first_name") firstName: String?,
     @RequestParam(required = false, name = "last_name") lastName: String?,
-  ): Map<String, List<Person?>> {
+    @PageableDefault paginationOptions: Pageable,
+  ): Page<Person?> {
     if (firstName == null && lastName == null) {
       throw ValidationException("No query parameters specified.")
     }
 
-    val persons = getPersonsService.execute(firstName, lastName)
+    val result = getPersonsService.execute(firstName, lastName)
 
-    return mapOf("persons" to persons)
+    return result.paginateWith(paginationOptions)
   }
 
   @GetMapping("{encodedPncId}")
